Update tree shape dimensions in index.html

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         }
 
         .tree-shape {
-            width: 0;
-            height: 0;
+            width: 400px;
+            height: 600px;
             border-left: 200px solid transparent;
             border-right: 200px solid transparent;
             border-bottom: 300px solid #2e7d32;
